add parameters for doFillALm....Items